# algorithms

./: .gitignore
CSharp/Pke.Algorithms/: Pke.Algorithms.sln
CSharp/Pke.Algorithms/Pke.Algorithms/: Class1.cs  DoubleExtensions.cs  Pke.Algorithms.csproj
CSharp/Pke.Algorithms/Pke.Algorithms.Tests/: .swp  Pke.Algorithms.Tests.csproj
CSharp/Pke.Algorithms/Pke.Algorithms.Tests/Geometry/Planar/: CoordinateArrayTransformsTests.cs  CosineOfAngleWithReferenceVectorComparerTests.cs  CosineTests.cs  CrossProdcutTests.cs  CrossProductTransformTests.cs  DotProductTests.cs  GrahamScanTests.cs  VectorTests.cs
CSharp/Pke.Algorithms/Pke.Algorithms/Geometry/Planar/: AngleWithVectorComparer.cs  CoordinateArrayTransforms.cs  CoordinateTransforms.cs  CrossProductTransforms.cs  PlanarCoordinateConstants.cs
CSharp/Pke.Algorithms/Pke.Algorithms/Geometry/Planar/Algorithms/: GrahamScan.cs  IFilterCoordinates.cs
CSharp/Pke.Algorithms/Pke.Algorithms/Geometry/Planar/Models/: ConvexHull.cs  Coordinate.cs  Cosine.cs  CrossProduct.cs  Direction.cs  DotProduct.cs  PkeStack.cs  Vector.cs
c/: CMakeLists.txt
c/algorithm_tests/: CMakeLists.txt  algorithm_tests.c
c/data_structure_tests/: CMakeLists.txt  data_structure_tests.c
c/lib/: CMakeLists.txt  algorithms.c  algorithms.h  data_structures.c  data_structures.h
c/lib/algorithms/: algorithms.h  graham_scan.c  graham_scan.h  pke_algorithms.h  pke_graham_scan.c  pke_graham_scan.h  pke_planar_opeartions.h  pke_planar_operations.c  pke_planar_operations.h
c/lib/data_structures/: data_structures.c  data_structures.h  pke_list.c  pke_list.h  pke_planar_objects.h  pke_stack.c  pke_stack.h
haskell/Algorithms/: package.yaml  stack.yaml
haskell/Algorithms/src/: Algorithms.hs
haskell/Algorithms/test/: Spec.hs
